# cairo-oracle

./: .tool-versions  Cargo.toml  README.md  SECURITY.md  Scarb.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml  docs.yml
example/: README.md  Scarb.toml  build-oracle
example/example-oracle/: Cargo.toml
example/example-oracle/src/: lib.rs
example/example-oracle/wit/: oracle.wit
example/my_oracle/: Cargo.toml
example/my_oracle/src/: main.rs
example/src/: lib.cairo
oracle/: CHANGELOG.md  README.md  Scarb.toml
oracle/src/: lib.cairo
sdk/rust/: CHANGELOG.md  Cargo.toml  README.md
sdk/rust/src/: builder.rs  handler.rs  io.rs  jsonrpc.rs  lib.rs  server.rs
shell/: CHANGELOG.md  README.md  Scarb.toml
shell/src/: lib.cairo
src/: errors.cairo  lib.cairo
