[package]
name = "cairo-oracle-server"
version = "0.1.0"
rust-version = "1.85.1"
edition = "2024"
description = "SDK for writing Cairo oracles in Rust"
authors = ["Software Mansion <contact@swmansion.com>"]
homepage = "https://docs.swmansion.com/scarb"
license = "MIT"
repository = "https://github.com/software-mansion/cairo-oracle"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
starknet-core = "0.15.0"
