[package]
name = "cairo-oracle-server"
version = "0.1.0"
rust-version = "1.85.1"
edition = "2024"

authors = ["Software Mansion <contact@swmansion.com>"]
categories = ["development-tools"]
description = "SDK for writing Cairo oracles in Rust"
homepage = "https://docs.swmansion.com/scarb"
keywords = ["cairo-lang", "starknet", "scarb"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/software-mansion/cairo-oracle"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
starknet-core = "0.15.0"
